fix network and cors error